Blank entry prevention
Added support to prevent blank entries. Played around with character limitations; ultimately did not implement.

--- a/src/app/todo-list/todo-list.component.css
+++ b/src/app/todo-list/todo-list.component.css
@@ -7,8 +7,9 @@ html, body {
     position: absolute;
     width: 50%;
     height: 407px;
+    min-width: 500px;
     background: #f5f5f5;
-    top: 10%;
+    top: 100px;
     left: 25%;
     border: 3px double black;
     overflow-y: auto;
